--- a/Wikipedia/Code/ReadingListDetailHeaderView.xib
+++ b/Wikipedia/Code/ReadingListDetailHeaderView.xib
@@ -1,36 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReadingListDetailUnderBarViewController" customModule="Wikipedia" customModuleProvider="target">
-            <connections>
-                <outlet property="alertMessageLabel" destination="ucP-Jo-vbh" id="Hqa-dW-TJs"/>
-                <outlet property="alertStackView" destination="b68-aF-tEl" id="ux1-ZT-Gng"/>
-                <outlet property="alertTitleLabel" destination="nSt-9T-l8Y" id="Y9B-sH-dno"/>
-                <outlet property="articleCountLabel" destination="je4-fy-lZN" id="JcP-Ft-I7Y"/>
-                <outlet property="descriptionTextField" destination="8lA-8c-7oC" id="wgd-tn-rJ7"/>
-                <outlet property="titleTextField" destination="nam-rp-zyS" id="Ft5-9v-Fvb"/>
-                <outlet property="view" destination="Xmb-b2-8dI" id="p04-UI-eb6"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Xmb-b2-8dI">
+        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Xmb-b2-8dI" customClass="ReadingListDetailHeaderView" customModule="Wikipedia" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="516" height="293"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RAW-9u-9Y1">
-                    <rect key="frame" x="6" y="6" width="504" height="184.5"/>
+                    <rect key="frame" x="6" y="6" width="504" height="176.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qGG-Mh-IBd">
-                            <rect key="frame" x="8" y="22" width="488" height="154.5"/>
+                            <rect key="frame" x="8" y="22" width="488" height="146.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je4-fy-lZN">
                                     <rect key="frame" x="0.0" y="0.0" width="488" height="20.5"/>
@@ -39,49 +27,33 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nam-rp-zyS" customClass="WMFThemeableTextField">
-                                    <rect key="frame" x="0.0" y="28.5" width="488" height="30"/>
-                                    <nil key="textColor"/>
+                                    <rect key="frame" x="0.0" y="28.5" width="488" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
-                                        <action selector="titleTextFieldTextDidChange:" destination="-1" eventType="editingChanged" id="Vtz-eW-aUp"/>
+                                        <action selector="titleTextFieldTextDidChange:" destination="Xmb-b2-8dI" eventType="editingChanged" id="AAb-t6-i4Q"/>
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8lA-8c-7oC" customClass="WMFThemeableTextField">
-                                    <rect key="frame" x="0.0" y="66.5" width="488" height="30"/>
-                                    <nil key="textColor"/>
+                                    <rect key="frame" x="0.0" y="70.5" width="488" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
-                                    <rect key="frame" x="0.0" y="104.5" width="488" height="50"/>
+                                <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
+                                    <rect key="frame" x="0.0" y="112.5" width="488" height="34"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9i-6i-y4t" userLabel="Spacer view">
-                                            <rect key="frame" x="0.0" y="0.0" width="488" height="1"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" priority="999" constant="1" id="nff-HF-3Tb"/>
-                                            </constraints>
-                                        </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSt-9T-l8Y">
-                                            <rect key="frame" x="0.0" y="8" width="488" height="13.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="488" height="13.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucP-Jo-vbh">
-                                            <rect key="frame" x="0.0" y="28.5" width="488" height="13.5"/>
+                                            <rect key="frame" x="0.0" y="20.5" width="488" height="13.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kjt-iH-sGc" userLabel="Spacer view">
-                                            <rect key="frame" x="0.0" y="49" width="488" height="1"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" priority="999" constant="1" id="aex-VF-BxW"/>
-                                            </constraints>
-                                        </view>
                                     </subviews>
                                 </stackView>
                             </subviews>
@@ -92,9 +64,11 @@
                         <constraint firstItem="qGG-Mh-IBd" firstAttribute="leading" secondItem="RAW-9u-9Y1" secondAttribute="leadingMargin" id="5sd-F5-2id"/>
                         <constraint firstItem="qGG-Mh-IBd" firstAttribute="top" secondItem="RAW-9u-9Y1" secondAttribute="topMargin" id="BJY-BR-ysf"/>
                         <constraint firstAttribute="trailingMargin" secondItem="qGG-Mh-IBd" secondAttribute="trailingMargin" id="DJx-4n-LBz"/>
+                        <constraint firstAttribute="width" constant="504" id="yue-TZ-Int"/>
                     </constraints>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="yFK-JI-pIL"/>
             <constraints>
                 <constraint firstItem="RAW-9u-9Y1" firstAttribute="leading" secondItem="Xmb-b2-8dI" secondAttribute="leading" constant="6" id="7L6-Jo-FH7"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RAW-9u-9Y1" secondAttribute="bottom" constant="4" id="uCP-Td-pKF"/>
@@ -102,7 +76,15 @@
                 <constraint firstItem="RAW-9u-9Y1" firstAttribute="top" secondItem="Xmb-b2-8dI" secondAttribute="top" constant="6" id="z2M-JR-S8c"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="yFK-JI-pIL"/>
+            <connections>
+                <outlet property="alertMessageLabel" destination="ucP-Jo-vbh" id="aQ6-e9-fD6"/>
+                <outlet property="alertStackView" destination="b68-aF-tEl" id="whS-JR-Z0e"/>
+                <outlet property="alertTitleLabel" destination="nSt-9T-l8Y" id="X5J-qk-iPM"/>
+                <outlet property="articleCountLabel" destination="je4-fy-lZN" id="pSg-F0-BeP"/>
+                <outlet property="containerViewWidthConstraint" destination="yue-TZ-Int" id="jwP-ro-UOO"/>
+                <outlet property="descriptionTextField" destination="8lA-8c-7oC" id="oNX-HF-k5z"/>
+                <outlet property="titleTextField" destination="nam-rp-zyS" id="zmx-6h-2mh"/>
+            </connections>
             <point key="canvasLocation" x="599" y="122.5"/>
         </view>
     </objects>
