--- a/Wikipedia/Code/ReadingListDetailHeaderView.xib
+++ b/Wikipedia/Code/ReadingListDetailHeaderView.xib
@@ -1,91 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" id="Xmb-b2-8dI" customClass="ReadingListDetailHeaderView" customModule="Wikipedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="516" height="293"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" id="dRH-WX-ygt" customClass="ReadingListDetailHeaderView" customModule="Wikipedia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="434" height="211"/>
+            <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RAW-9u-9Y1">
-                    <rect key="frame" x="6" y="6" width="504" height="176.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qGG-Mh-IBd">
+                    <rect key="frame" x="20" y="20" width="394" height="171"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qGG-Mh-IBd">
-                            <rect key="frame" x="8" y="22" width="488" height="146.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je4-fy-lZN">
+                            <rect key="frame" x="0.0" y="0.0" width="394" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nam-rp-zyS" customClass="WMFThemeableTextField">
+                            <rect key="frame" x="0.0" y="28.5" width="394" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8lA-8c-7oC" customClass="WMFThemeableTextField">
+                            <rect key="frame" x="0.0" y="70.5" width="394" height="58.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
+                            <rect key="frame" x="0.0" y="137" width="394" height="34"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je4-fy-lZN">
-                                    <rect key="frame" x="0.0" y="0.0" width="488" height="20.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSt-9T-l8Y">
+                                    <rect key="frame" x="0.0" y="0.0" width="394" height="13.5"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nam-rp-zyS" customClass="WMFThemeableTextField">
-                                    <rect key="frame" x="0.0" y="28.5" width="488" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                    <connections>
-                                        <action selector="titleTextFieldTextDidChange:" destination="Xmb-b2-8dI" eventType="editingChanged" id="AAb-t6-i4Q"/>
-                                    </connections>
-                                </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8lA-8c-7oC" customClass="WMFThemeableTextField">
-                                    <rect key="frame" x="0.0" y="70.5" width="488" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <stackView opaque="NO" alpha="0.0" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="b68-aF-tEl">
-                                    <rect key="frame" x="0.0" y="112.5" width="488" height="34"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSt-9T-l8Y">
-                                            <rect key="frame" x="0.0" y="0.0" width="488" height="13.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucP-Jo-vbh">
-                                            <rect key="frame" x="0.0" y="20.5" width="488" height="13.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </stackView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucP-Jo-vbh">
+                                    <rect key="frame" x="0.0" y="20.5" width="394" height="13.5"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                         </stackView>
                     </subviews>
-                    <constraints>
-                        <constraint firstAttribute="bottomMargin" secondItem="qGG-Mh-IBd" secondAttribute="bottom" id="2Zm-3O-wTh"/>
-                        <constraint firstItem="qGG-Mh-IBd" firstAttribute="leading" secondItem="RAW-9u-9Y1" secondAttribute="leadingMargin" id="5sd-F5-2id"/>
-                        <constraint firstItem="qGG-Mh-IBd" firstAttribute="top" secondItem="RAW-9u-9Y1" secondAttribute="topMargin" id="BJY-BR-ysf"/>
-                        <constraint firstAttribute="trailingMargin" secondItem="qGG-Mh-IBd" secondAttribute="trailingMargin" id="DJx-4n-LBz"/>
-                        <constraint firstAttribute="width" constant="504" id="yue-TZ-Int"/>
-                    </constraints>
-                </view>
+                </stackView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="yFK-JI-pIL"/>
             <constraints>
-                <constraint firstItem="RAW-9u-9Y1" firstAttribute="leading" secondItem="Xmb-b2-8dI" secondAttribute="leading" constant="6" id="7L6-Jo-FH7"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="RAW-9u-9Y1" secondAttribute="bottom" constant="4" id="uCP-Td-pKF"/>
-                <constraint firstAttribute="trailing" secondItem="RAW-9u-9Y1" secondAttribute="trailing" constant="6" id="ueu-pb-rGD"/>
-                <constraint firstItem="RAW-9u-9Y1" firstAttribute="top" secondItem="Xmb-b2-8dI" secondAttribute="top" constant="6" id="z2M-JR-S8c"/>
+                <constraint firstItem="qGG-Mh-IBd" firstAttribute="top" secondItem="dRH-WX-ygt" secondAttribute="top" constant="20" symbolic="YES" id="9hn-9z-OoP"/>
+                <constraint firstAttribute="bottom" secondItem="qGG-Mh-IBd" secondAttribute="bottom" constant="20" symbolic="YES" id="YP6-Rm-qtw"/>
+                <constraint firstAttribute="trailing" secondItem="qGG-Mh-IBd" secondAttribute="trailing" constant="20" symbolic="YES" id="kQL-YK-VnM"/>
+                <constraint firstItem="qGG-Mh-IBd" firstAttribute="leading" secondItem="dRH-WX-ygt" secondAttribute="leading" constant="20" symbolic="YES" id="oGp-Le-1wF"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="alertMessageLabel" destination="ucP-Jo-vbh" id="aQ6-e9-fD6"/>
-                <outlet property="alertStackView" destination="b68-aF-tEl" id="whS-JR-Z0e"/>
-                <outlet property="alertTitleLabel" destination="nSt-9T-l8Y" id="X5J-qk-iPM"/>
-                <outlet property="articleCountLabel" destination="je4-fy-lZN" id="pSg-F0-BeP"/>
-                <outlet property="containerViewWidthConstraint" destination="yue-TZ-Int" id="jwP-ro-UOO"/>
-                <outlet property="descriptionTextField" destination="8lA-8c-7oC" id="oNX-HF-k5z"/>
-                <outlet property="titleTextField" destination="nam-rp-zyS" id="zmx-6h-2mh"/>
+                <outlet property="alertMessageLabel" destination="ucP-Jo-vbh" id="LH4-ZL-qDK"/>
+                <outlet property="alertStackView" destination="b68-aF-tEl" id="Yfm-4D-Dfp"/>
+                <outlet property="alertTitleLabel" destination="nSt-9T-l8Y" id="Vhq-yV-EsP"/>
+                <outlet property="articleCountLabel" destination="je4-fy-lZN" id="7Rw-Oc-Z8X"/>
+                <outlet property="descriptionTextField" destination="8lA-8c-7oC" id="M0x-K5-5LF"/>
+                <outlet property="titleTextField" destination="nam-rp-zyS" id="8O2-hI-5uT"/>
             </connections>
-            <point key="canvasLocation" x="599" y="122.5"/>
-        </view>
+            <point key="canvasLocation" x="302.39999999999998" y="-19.340329835082461"/>
+        </collectionReusableView>
     </objects>
 </document>
